# autoartisan

./: .gitignore  .gitmodules  README.md
PI/: .gitignore  README.md
PI/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
PI/install/autoartisan/share/autoartisan/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PI/install/drive_base_msgs/share/drive_base_msgs/: local_setup.sh  package.sh
PI/install/mason_control/share/mason_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PI/install/mason_control/share/mason_control/config/: mason_test.yaml
PI/install/mason_control/share/mason_control/launch/: mason.xacro.urdf  mason_test.launch.py
PI/install/mason_control/share/mason_description/description/urdf/: mason.ros2_control.xacro
PI/install/mason_description/share/ament_index/resource_index/parent_prefix_path/: mason_description
PI/install/mason_description/share/mason_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PI/install/mason_description/share/mason_description/cmake/: mason_descriptionConfig.cmake
PI/install/mason_description/share/mason_description/description/meshes/: BrushMotor.STL  Camera.STL  Extruder.STL  ExtruderLid.STL  GearboxLeft.STL  GearboxRight.STL  GearboxTop.STL  Horizontal Bar Bottom.STL  Horizontal Bar Connector Left.STL  Horizontal Bar Connector.STL  LeftBar.STL  LeftBracketBottom.STL  Monteerplaatje Left.STL  Motorplaatje Right.STL  RightBracketBottom.STL  RightBracketTop.STL  ServoBottom.STL  ServoLeft.STL  ServoRight.STL  ToolHeads.STL  Wheel11.STL  Wheel12.STL  Wheel3.STL  Wheel4.STL  Wheel5.STL  Wheel8.STL  Wheel9.STL  WheelHinge1Left.STL  WheelHinge1Right.STL  WheelHinge2Left.STL  WheelHinge3Left.STL  WheelHinge3Right.STL  brickWall.STL
PI/install/mason_hardware/include/mason_hardware/: contact_sensors.hpp  mason_interface.hpp  motor.hpp
PI/install/mason_hardware/include/mason_hardware/mason_hardware/: crc.h  mason_interface.hpp  motor.h  motor.hpp
PI/install/mason_hardware/share/mason_hardware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PI/install/mason_hardware/share/mason_hardware/cmake/: ament_cmake_export_dependencies-extras.cmake  mason_hardwareConfig.cmake
PI/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
PI/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
PI/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
PI/install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
PI/install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
PI/install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
PI/install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
PI/install/realsense2_camera/share/realsense2_camera/launch/: rs_launch.py
PI/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
PI/install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
PI/src/autoartisan/: setup.cfg  setup.py
PI/src/autoartisan/launch/: launch.py
PI/src/autoartisan2/: CMakeLists.txt  package.xml
PI/src/autoartisan2/src/: navigation_node.cpp
PI/src/mason/: README.md  package.xml  setup.cfg  setup.py
PI/src/mason/launch/: mason.launch.py
PI/src/mason_camera/: .clang-format  CMakeLists.txt  README.md  package.xml
PI/src/mason_camera/include/mason_camera/: detection.h  filters.h
PI/src/mason_camera/src/: camera_node.cpp  camera_node2.cpp  detection.cpp  filters.cpp
PI/src/mason_control/: package.xml  setup.cfg  setup.py
PI/src/mason_control/config/: mason_test.yaml  mason_test2.yaml
PI/src/mason_control/launch/: mason_control.launch.py  mason_test.launch.py  mason_test_forward_pos_ctrl.launch.py
PI/src/mason_control/urdf/: mason.urdf.xacro  mason_description.urdf.xacro
PI/src/mason_description/: CMakeLists.txt
PI/src/mason_description/description/meshes/: Brush.STL  Horizontal Bar Top.STL  LeftBracketTop.STL  Monteerplaatje Top.STL  Motor Top.STL  MotorLeft.STL  MotorRight.STL  RightBar.STL  Wheel10.STL  Wheel2.STL  Wheel6.STL  Wheel7.STL  WheelBracketTop.STL  WheelHinge2Right.STL
PI/src/mason_description/description/urdf/: camera.xarco.urdf  mason.ros2_control.xacro  mason.urdf.xacro  mason2.ros2_control.xacro
PI/src/mason_description/description/world/: sensorsWorld.sdf
PI/src/mason_flask/: README.md  package.xml  setup.cfg  setup.py
PI/src/mason_flask/mason_flask/: flask_server.py  server.py  utils.py
PI/src/mason_hardware/: CMakeLists.txt  README.md  mason.xml
PI/src/mason_hardware/include/mason_hardware/: commands.hpp  contact_sensors.hpp  crc.h  crc.hpp  mason_interface.hpp  mason_interface2.hpp  motor.h
PI/src/mason_hardware/src/: contact_sensors.cpp  mason_interface.cpp  mason_interface2.cpp  motor.cpp
PI/src/mason_navigation/: CMakeLists.txt  README.md  package.xml
PI/src/mason_navigation/src/: contact_sensor_node.cpp  homing_sequence.cpp  navigation_node.cpp
PI/src/mason_navigation/srv/: HomingSequence.srv
PI/src/mason_test/: CMakeLists.txt  package.xml
PI/src/mason_test/src/: test_node.cpp
PI/src/mason_test/srv/: Float.srv
PI/src/mason_web/: README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.ts  tsconfig.app.json
PI/src/mason_web/src/: App.tsx  camera.tsx  camerafeed.tsx  dashboard.tsx  position.tsx  res.tsx  resovoir.tsx  state.ts
PI/src/mason_web/src/lib/: utils.ts
Teensy/: README.md  platformio.ini
Teensy/src/: main.cpp  sensors.h
Vesc-cpp/: CMakeLists.txt  README.md  commands.h  crc.h  main.cpp  motor.cpp  motor.h
teensyA/: README.md  platformio.ini  smoothing_tool.cpp  smoothing_tool.h
teensyA/src/: main.cpp  main2.cpp
teensyA/src/sensors/: tof_isr.cpp
teensyB/: README.md
vescpy/: motor.py  package.py
vescpy/examples/: position_plotting.py
(+13 files in other folders)
